--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Time Tracking App",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/api/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +25,7 @@
   "devDependencies": {
     "eslint": "^3.19.0",
     "eslint-plugin-import": "^2.3.0",
-    "eslint-watch": "^3.1.0"
+    "eslint-watch": "^3.1.0",
+    "nodemon": "^1.11.0"
   }
 }
