--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Time Tracking App",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/api/app.js",
+    "dev": "nodemon ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ccalvarez/time-tracking-vue-express#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "mongoose": "^4.10.5"
   },
